# LatticeBoltzmannMethod

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  environment.yml  load_osc.sh  todo.txt
src/: Makefile  config.h  config.json  config.yml  helper.py  lbm_kernels.cu  lbm_solver  main.cpp  main.cu  output.csv  plot_lbm.plt  plot_strouhal.plt  plot_uy.plt  plot_vortex.plt  strouhal.py  test_kernels.cu  visualize.py
src/LibYAML/lib64/cmake/yaml-cpp/: yaml-cpp-targets-noconfig.cmake
src/LibYAML/lib64/pkgconfig/: yaml-cpp.pc
tst/: main.cpp  main.cu  test_kernels.h
